# ift3700

devoir-1/: README.md  monthly_totals.py  np_summary.py  pd_summary.py  pyproject.toml  timing.ipynb
devoir-2/: pyproject.toml  q1.py  q2.py  q3.py
devoir-3/: README.md  chess_rating.ipynb  chess_rating.py  pyproject.toml  reddit_weekends.ipynb  reddit_weekends.py
devoir-4/: HW5EtienneCollin_20237904.md  README.md  README_fr.md  create_artifact.sh  deliverables.yaml  pyproject.toml  upload.sh
devoir-4/deployment/: deploy_backend_v2.sh  deploy_frontend_v1.sh  deploy_frontend_v2.sh  deploy_service.sh  submit_build.sh  submit_build_backend_v2.sh  submit_build_frontend_v1.sh  submit_build_frontend_v2.sh
devoir-4/upload/: cloudbuild.yaml  deploy_backend_v1.sh  submit_build.sh
devoir-5/: README.md  hw5.py  notebook.ipynb  pyproject.toml
devoir-6/: main.typ  notebook.ipynb  pyproject.toml  refs.bib
